--- a/src/components/rest-api/RestApiTab.module.css
+++ b/src/components/rest-api/RestApiTab.module.css
@@ -1,15 +1,35 @@
 /* REST API Tab Component */
 
 .restApiTab {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 90px);
+    overflow: hidden;
 }
 
 .requestEditor {
     height: 150px;
 }
 
+.responseCard {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    margin-bottom: 0;
+}
+
+.responseCardBody {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    overflow: hidden;
+}
+
 .responseEditor {
-    height: 400px;
+    flex: 1;
+    min-height: 0;
 }
 
 .headerIconRest {
